--- a/mern-chat-app-master/frontend/package.json
+++ b/mern-chat-app-master/frontend/package.json
@@ -1,13 +1,14 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "https://localhost:5000",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/react": "^1.6.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@react-oauth/google": "^0.12.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
