--- a/mern-chat-app-master/package.json
+++ b/mern-chat-app-master/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node backend/server.js",
+    "tunnel": "node backend/startTunnel.js",
     "server": "nodemon backend/server.js",
     "build": "npm install --legacy-peer-deps && npm install --legacy-peer-deps --prefix frontend && npm run build --prefix frontend"
   },
@@ -18,12 +19,15 @@
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^9.0.2",
-    "express": "^4.17.1",
+    "express": "^4.21.2",
     "express-async-handler": "^1.1.4",
+    "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.9",
     "node-forge": "^1.3.1",
     "nodemon": "^2.0.7",
-    "socket.io": "^4.1.2"
+    "selfsigned": "^4.0.0",
+    "socket.io": "^4.8.1",
+    "localtunnel": "^2.0.2"
   }
 }
